--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -43,10 +43,10 @@
 
   <div class="col card border-0" >
   <div class="card-body">
-  <h5 class="card-title">Aclaracón de cargos</h5>
+  <h5 class="card-title">Aclaración de cargos</h5>
   <h6 class="card-subtitle mb-2 text-muted">Responsable: Carlos Ayala</h6>
   <p class="card-text">
-  Telefono:	</br> 5513289022</br>
+  Teléfono:	</br> 5513289022</br>
   Whatsapp: </br> 5514559559</br>
   Correo:</br> aclaraciondecargos@utel.edu.mx
 
@@ -58,9 +58,9 @@
   <div class="col card border-0" >
   <div class="card-body">
   <h5 class="card-title">Administración de colegiaturas</h5>
-  <h6 class="card-subtitle mb-2 text-muted">Cordinación: Diana Manjarrez</h6>
+  <h6 class="card-subtitle mb-2 text-muted">Coordinación: Diana Manjarrez</h6>
   <p class="card-text">
-  Telefono:	</br>5536841414 - 5536841414</br>
+  Teléfono:	</br>5536841414 - 5536841414</br>
   Whatsapp: </br>5573773982</br>
   Correo: </br>cobranza@utel.mx
 
@@ -73,7 +73,7 @@
   <h5 class="card-title">Cobranza</h5>
   <h6 class="card-subtitle mb-2 text-muted">Supervisor: Luis Eduardo Martínez</h6>
   <p class="card-text">
-  Telefono:	</br>5536841414 - 5536841414</br>
+  Teléfono:	</br>5536841414 - 5536841414</br>
   Whatsapp: </br>5573773982</br>
   Correo: </br>cobranza@utel.mx - lmartiro@utel.edu.mx
 
@@ -87,7 +87,7 @@
   <h5 class="card-title">Facturación</h5>
   <h6 class="card-subtitle mb-2 text-muted">Óscar Gonzalez Vega</h6>
   <p class="card-text">
-  Telefono:	</br>5550897310 - 5550897302</br>
+  Teléfono:	</br>5550897310 - 5550897302</br>
   Whatsapp: </br>5573773982</br>
   Correo: </br>facturacion@utel.edu.mx - acalixgo@utel.edu.mx
 
@@ -100,7 +100,7 @@
   <h5 class="card-title">Graduaciones</h5>
   <h6 class="card-subtitle mb-2 text-muted">Responsable: Carlos Ayala</h6>
   <p class="card-text">
-  Telefono:	</br> 5513289010</br>
+  Teléfono:	</br> 5513289010</br>
   Whatsapp: </br> 5513289010</br>
   Correo:</br> graduacion@utel.edu.mx
 
@@ -117,7 +117,7 @@
   Adriana Vázquez Salcedo (matutino)</br>
   Ericka Vázquez (vespertino)</h6>
   <p class="card-text">
-  Telefono:	</br>5550897300</br>
+  Teléfono:	</br>5550897300</br>
   Correo: </br>cobranza@utel.mx
 
   </p>
@@ -129,7 +129,7 @@
   <h5 class="card-title">Recolección</h5>
   <h6 class="card-subtitle mb-2 text-muted">Responsable: Josué Moisés Pacheco</h6>
   <p class="card-text">
-  Telefono:	</br>5536841414 - 5536841414</br>
+  Teléfono:	</br>5536841414 - 5536841414</br>
   Whatsapp: </br>5573773982</br>
   Correo: </br>c.estudiantil@utel.edu.mx
 
@@ -143,7 +143,7 @@
   <h5 class="card-title">Servicio social</h5>
   <h6 class="card-subtitle mb-2 text-muted">Óscar Gonzalez Vega</h6>
   <p class="card-text">
-  Telefono:	</br>5513289025</br>
+  Teléfono:	</br>5513289025</br>
   Whatsapp: </br>5513289025</br>
   Correo: </br>serviciosocial@utel.edu.mx
 
@@ -156,7 +156,7 @@
   <h5 class="card-title">Servicio Social UTEL</h5>
   <h6 class="card-subtitle mb-2 text-muted">Responsable: Carlos Ayala</h6>
   <p class="card-text">
-  Telefono:	</br> 5550897377</br>
+  Teléfono:	</br> 5550897377</br>
   Whatsapp: </br> - </br>
   Correo:</br> desarrollo.profesional@utel.edu.mx
 
@@ -170,7 +170,7 @@
   <h5 class="card-title">Servicios Escolares</h5>
   <h6 class="card-subtitle mb-2 text-muted">Coordinador: José Luis Rodriguez</h6>
   <p class="card-text">
-  Telefono:	</br>5550897350	</br>
+  Teléfono:	</br>5550897350	</br>
   Whatsapp: </br> - </br>
   Correo: </br>escolares@utel.edu.mx
 
@@ -183,7 +183,7 @@
   <h5 class="card-title">Titulación</h5>
   <h6 class="card-subtitle mb-2 text-muted">Coordinadora: Laura Patricia Zúñiga Vargas</h6>
   <p class="card-text">
-  Telefono:	</br>5513289010</br>
+  Teléfono:	</br>5513289010</br>
   Whatsapp: </br>5513289010</br>
   Correo: </br>titulacion@utel.edu.mx
 
@@ -197,7 +197,7 @@
   <h5 class="card-title">Éxito estudiantil Licenciatura</h5>
   <h6 class="card-subtitle mb-2 text-muted">Óscar Gonzalez Vega</h6>
   <p class="card-text">
-  Telefono:	</br> - </br>
+  Teléfono:	</br> - </br>
   Whatsapp: </br> - </br>
   Correo: </br> -
 
@@ -478,7 +478,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Se puede veríficar si el egresado o estudiante ya habló con algún compañero anteriormente
+      Se puede verificar si el egresado o estudiante ya habló con algún compañero anteriormente
     </div>
 
     <div class="col col-mb-4">
@@ -530,7 +530,7 @@
 
   <div class="row">
     <div class="col col-mb-4">
-      Tutoria - bajas
+      Tutoría - bajas
     </div>
 
     <div class="col col-mb-4">
@@ -594,7 +594,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Consultar el CURP asosiado de un egresado o alumno
+      Consultar el CURP asociado de un egresado o alumno
     </div>
 
     <div class="col col-mb-4">
@@ -654,7 +654,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Revisar el estatus que guarda el estudiante con respecto al SS Se puede revisar fechas de incio y término
+      Revisar el estatus que guarda el estudiante con respecto al SS Se puede revisar fechas de inicio y término
     </div>
 
     <div class="col col-mb-4">
@@ -664,7 +664,7 @@
 
   <div class="row">
     <div class="col col-mb-4">
-      Sevicio social SERSO
+      Servicio social SERSO
     </div>
 
     <div class="col col-mb-4">
@@ -710,11 +710,11 @@
 
   <div class="row">
     <div class="col col-mb-4">
-      Solicitud de prestamo y devolución
+      Solicitud de préstamo y devolución
     </div>
 
     <div class="col col-mb-4">
-      Flokzu para solicitar prestamos y devolución de documentos.
+      Flokzu para solicitar préstamos y devolución de documentos.
     </div>
 
     <div class="col col-mb-4">
@@ -728,7 +728,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Cotejar los número de guías de envío anteriores a marzo de 2023
+      Cotejar los números de guías de envío anteriores a marzo de 2023
     </div>
 
     <div class="col col-mb-4">
@@ -742,7 +742,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Formulario para solicitar guia para entrega de documentos por revalidacion o EQ
+      Formulario para solicitar guía para entrega de documentos por revalidación o EQ
     </div>
 
     <div class="col col-mb-4">
