--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -77,7 +77,7 @@
                       <div class="row">
                         <div class="col">
 
-                          <strong>Documentación para licencitura:</strong> </br></br>
+                          <strong>Documentación para licenciatura:</strong> </br></br>
                           -CURP</br>
                           -Carta poder (en caso de equivalencia)</br>
                           -Certificado parcial Licenciatura (en caso de equivalencia)</br>
@@ -86,7 +86,7 @@
                           -Certificado total bachillerato</br>
                           -Identificación oficial</br>
                           -Comprobante de domicilio</br>
-                          -Terminos y condiciones</br>
+                          -Términos y condiciones</br>
                           -Solicitud de admisión </br></br>
 
                           <strong>Documentación para Maestría:</strong> </br></br>
@@ -96,7 +96,7 @@
                           -Identificación oficial</br>
                           -Carta compromiso</br>
                           -Pago</br>
-                          -Terminos y condiciones</br>
+                          -Términos y condiciones</br>
                           -Título digital</br>
                           -Curriculum vitae</br>
                           -Carta motivos</br>
@@ -110,8 +110,8 @@
                           -Identificación oficial</br>
                           -Carta compromiso</br>
                           -Pago</br>
-                          -Terminos y condiciones</br>
-                          -Constancia de ingles</br>
+                          -Términos y condiciones</br>
+                          -Constancia de Ingles</br>
                           -Título digital</br>
                           -Curriculum vitae</br>
                           -Carta motivos</br>
@@ -159,7 +159,7 @@
 
                       Los documentos que deben entregar son:</br></br>
                       1. Carta Compromiso original con firma autógrafa con hoja anexa</br></br>
-                      2. Copia Notariada del DNI (Identificación oficial) o también le llaman cédula de Iuentidad,
+                      2. Copia Notariada del DNI (Identificación oficial) o también le llaman cédula de identidad,
                       debe estar vigente o el acta, partida o certificado de Nacimiento</br></br>
                       3. Copia Notariada del Diploma o Título de Bachiller o de Licenciatura según sea el caso</br></br>
                       4. En los casos de Maestría carta de Exposición de motivos
@@ -202,8 +202,8 @@
                               <div class="col">
                                 
 
-                                <strong>Documentación para licencitura:</strong> </br></br>
-                                -Antecentes academicos bachillerato</br>
+                                <strong>Documentación para licenciatura:</strong> </br></br>
+                                -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Comprobante de domicilio</br>
@@ -211,7 +211,7 @@
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
 
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Constancia laboral
@@ -220,7 +220,7 @@
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Constancia laboral
@@ -268,15 +268,15 @@
                             <div class="row">
                               <div class="col">
 
-                                <strong>Documentación para licencitura:</strong> </br></br>
-                                -Antecentes academicos bachillerato</br>
+                                <strong>Documentación para licenciatura:</strong> </br></br>
+                                -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
 
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
@@ -325,15 +325,15 @@
                             <div class="row">
                               <div class="col">
 
-                                <strong>Documentación para licencitura:</strong> </br></br>
-                                -Antecentes academicos bachillerato</br>
+                                <strong>Documentación para licenciatura:</strong> </br></br>
+                                -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
 
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
@@ -382,8 +382,8 @@
                             <div class="row">
                               <div class="col">
 
-                                <strong>Documentación para licencitura:</strong> </br></br>
-                                -Antecentes academicos bachillerato</br>
+                                <strong>Documentación para licenciatura:</strong> </br></br>
+                                -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Comprobante de domicilio</br>
@@ -391,7 +391,7 @@
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
 
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Constancia laboral
@@ -400,7 +400,7 @@
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Constancia laboral
@@ -455,15 +455,15 @@
                             <div class="row">
                               <div class="col">
   
-                                <strong>Documentación para licencitura:</strong> </br></br>
-                                -Antecentes academicos bachillerato</br>
+                                <strong>Documentación para licenciatura:</strong> </br></br>
+                                -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
 
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
@@ -513,8 +513,8 @@
                             <div class="row">
                               <div class="col">
 
-                                <strong>Documentación para licencitura:</strong> </br></br>
-                                -Antecentes academicos bachillerato</br>
+                                <strong>Documentación para licenciatura:</strong> </br></br>
+                                -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Comprobante de domicilio</br>
@@ -522,7 +522,7 @@
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
 
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Constancia laboral
@@ -531,7 +531,7 @@
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
                                 -Constancia laboral
@@ -587,15 +587,15 @@
                             <div class="row">
                               <div class="col">
 
-                                <strong>Documentación para licencitura:</strong> </br></br>
-                                -Antecentes academicos bachillerato</br>
+                                <strong>Documentación para licenciatura:</strong> </br></br>
+                                -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
 
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
@@ -644,15 +644,15 @@
                             <div class="row">
                               <div class="col">
 
-                                <strong>Documentación para licencitura:</strong> </br></br>
-                                -Antecentes academicos bachillerato</br>
+                                <strong>Documentación para licenciatura:</strong> </br></br>
+                                -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
 
-                                -Antecentes academicos licenciatura</br>
+                                -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
@@ -707,7 +707,7 @@
                           -CURP</br>
                           -Acta de nacimiento</br>
                           -Carta compromiso y anexo de datos y costos</br>
-                          -Antecentes academicos</br>
+                          -Antecedentesacadémicos</br>
                           -Identificación oficial</br>
                           -Comprobante de domicilio</br>
                         </div>
@@ -916,7 +916,7 @@
                 </div>
               </div>
 
-              <!--Dictamen Tecnico-->
+              <!--Dictamen técnico-->
               <div class="col">
                 <div class="card border-0 mb-3">
 
@@ -924,7 +924,7 @@
 
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title text-center">Dictamen Tecnico</h5>
+                        <h5 class="card-title text-center">Dictamen técnico</h5>
                         <p class="card-text">
 
                           Este proceso aplica para los estudiantes que ingresan a UTEL con fines académicos sin la
@@ -945,14 +945,14 @@
                                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#panelsStayOpen-collapse3" aria-expanded="true"
                                     aria-controls="panelsStayOpen-collapse3">
-                                    Documentación de dictamen tecnico
+                                    Documentación de dictamen técnico
                                   </button>
                                 </h2>
                                 <div id="panelsStayOpen-collapse3" class="accordion-collapse collapse"
                                   aria-labelledby="panelsStayOpen-heading3">
                                   <div class="accordion-body">
                                     <div class="container rounded-3 my-3 py-3 bg-white">
-                                      <h5 class="text-center">Documentación de dictamen tecnico</h5>                                      
+                                      <h5 class="text-center">Documentación de dictamen técnico</h5>                                      
 
                                       • Formato Digital de Acta de Nacimiento o Documento que acredite la identidad del interesado
                                       </br>
@@ -1008,7 +1008,7 @@
                       <h5 class="card-title text-center">¿Qué es la legalización?</h5>
                       <p class="card-text">
 
-                        El trámite de Legalización de Firmas, consiste en certificar las Firmas de los Servidores
+                        El trámite de Legalización de Firmas consiste en certificar las Firmas de los Servidores
                         Públicos Federales
                         y Estatales, facultados para hacer constar la validez y legitimidad de los Documentos Públicos
                         de origen
@@ -1047,7 +1047,7 @@
                       <ul>
 
                         <li>
-                          La leyenda de "Este documento es valido en toda la República Mexicana y no requiere tramites
+                          La leyenda de "Este documento es válido en toda la República Mexicana y no requiere tramites
                           adicionales de legalización"
                         </li>
                         <li>
@@ -1123,7 +1123,7 @@
                         -Realizan escaneo de documentos.<br/>
                         -Realizan préstamos y devoluciones de documentos.<br/>
                         -Capturan datos de documentos de escuela de procedencia en banner.<br/>
-                        -Reciben documentos de trámite de EQ ó Rev ó Dictamen técnico.
+                        -Reciben documentos de trámite de EQ, Rev y Dictamen técnico.
 
                       </p>
 
@@ -1192,8 +1192,8 @@
                       <p class="card-text">
 
                         El alumno necesita contratar una guía prepagada de la paquetería de su preferencia para que con
-                        ella se dé salida a sus documentos (solo en casos extraordinarios el ex alumno o una tercera
-                        persona* podrá acudir por los documentos) *Si es una tercer persona deberá presentar el formato
+                        ella se dé salida a sus documentos (solo en casos extraordinarios el exalumno o una tercera
+                        persona* podrá acudir por los documentos) *Si es una tercera persona deberá presentar el formato
                         carta poder para terceros
 
                         <br /><br />
