--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -110,7 +110,7 @@
 
               </div>
 
-              <!--Dictamen Tecnico--> 
+              <!--Dictamen Técnico--> 
               <div class="col">
                 <div class="card border-0 mb-3" >
 
@@ -119,7 +119,7 @@
 
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h5 class="card-title text-center">Dictamen Tecnico</h5>
+                          <h5 class="card-title text-center">Dictamen Técnico</h5>
                           <p class="card-text">     
                             
                             Este proceso aplica para los estudiantes que ingresan a UTEL con fines académicos sin la 
@@ -173,7 +173,7 @@
                   no contiene foto. <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
-                  Tiempo estimado de espera: 5 a 10 dias hábiles.<br/>
+                  Tiempo estimado de espera: 5 a 10 días hábiles.<br/>
                   
                   </p>
                 </div>
@@ -193,7 +193,7 @@
                   <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
-                  Tiempo estimado de espera: 5 a 10 dias hábiles.<br/>
+                  Tiempo estimado de espera: 5 a 10 días hábiles.<br/>
                   
                   </p>
                 </div>
@@ -211,7 +211,7 @@
                   Para obtenerla debes tener tu expediente físico completo y fotografías tamaño óvalo-credencial. <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
-                  Tiempo estimado de espera: 5 a 10 dias hábiles.<br/>
+                  Tiempo estimado de espera: 5 a 10 días hábiles.<br/>
                   
                   </p>
                 </div>
@@ -219,10 +219,10 @@
                 
               </div>
 
-              <!--Historial academico-->
+              <!--Historial académico-->
               <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="equivalencia">
                 <div class="card-body">
-                  <h5 class="card-title">Historial academico</h5>
+                  <h5 class="card-title">Historial académico</h5>
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
                   <p class="card-text">
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida. Para obtenerlo debes tener cursado mínimo un cuatrimestre del programa inscrito 
@@ -231,7 +231,7 @@
                   <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
-                  Tiempo estimado de espera: 5 a 10 dias hábiles.<br/>
+                  Tiempo estimado de espera: 5 a 10 días hábiles.<br/>
                   
                   </p>
                 </div>
@@ -250,7 +250,7 @@
                   <br/><br/>
                   
                   Costo: 200.00 MXN<br/><br/>
-                  Tiempo estimado de espera: a 10 dias hábiles<br/>
+                  Tiempo estimado de espera: a 10 días hábiles<br/>
                   
                   </p>
                 </div>
@@ -277,7 +277,7 @@
               <!--Diploma Master-->
               <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="diplomaMaster">
                 <div class="card-body">
-                  <h5 class="card-title">Diploma Master</h5>
+                  <h5 class="card-title">Diploma Máster</h5>
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
                   <p class="card-text">
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida<br/><br/>
@@ -301,10 +301,10 @@
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(1)">Constancia de término</a>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(2)">Constancia de estudios</a>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(3)">Carta pasante</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(4)">Historial academico</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(4)">Historial académico</a>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(5)">Credencial</a>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(6)">Constancia de inscripción</a>
-                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(7)">Diploma Master</a>
+                <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(7)">Diploma Máster</a>
               </div>
 
             </div>
@@ -496,7 +496,7 @@
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Titulo intermedio auxiliar</h5>
+                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Título intermedio auxiliar</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="container card border border-0">
@@ -538,7 +538,7 @@
                     
                     <div class="col card border border-0">
   
-                      <strong class="py-3 px-3"> Caracteristicas del titulo intermedio</strong>
+                      <strong class="py-3 px-3"> Características del título intermedio</strong>
                       <a>
 
                         Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
@@ -560,7 +560,7 @@
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Titulo intermedio auxiliar</h5>
+                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Título  intermedio auxiliar</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="container card border border-0">
@@ -602,7 +602,7 @@
                     
                     <div class="col card border border-0">
   
-                      <strong class="py-3 px-3"> Caracteristicas del titulo intermedio</strong>
+                      <strong class="py-3 px-3"> Características del título intermedio</strong>
                       <a>
 
                         Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
