--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -371,17 +371,17 @@
                   2.-Expedición de constancia de título electrónico: la gestión de la constancia de título electrónico tarda un tiempo 
                   aproximado 4 meses.
                 </br></br>
-                  3.-Apostilla de título digital: el proceso demora de 60 a 90 días hábiles , siempre y cuando el pago esté reflejado en 
+                  3.-Apostilla de título digital: el proceso demora de 60 a 90 días hábiles, siempre y cuando el pago esté reflejado en 
                   sistema
                 </br></br>
-                  4.-Expedición de representación grafica (documento físico simbólico): Tarda un tiempo aproximado 2 meses y va firmado por 
+                  4.-Expedición de representación gráfica (documento físico simbólico): Tarda un tiempo aproximado 2 meses y va firmado por 
                   el Rector.
                 </br></br>
                   5.-Certificado de programa académico: Documento Institucional que se emite para nuestros egresados extranjeros interesado 
                   en realizar el trámite de Convalidación en su país de origen, que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y certificado de estudios UTEL.
                 </br></br>
                   6.-Envío internacional: Una vez que  se concluya el trámite de las apostillas se procederá a hacer el envío de la 
-                  documentación en físico , siempre y cuando el pago esté reflejado en sistema 
+                  documentación en físico, siempre y cuando el pago esté reflejado en sistema 
                 </br></br>                                  
                   <b>
                     Deberá contar con el 100% de los créditos académicos y estar en estatus de egresado, no tener adeudos, documentación 
@@ -389,7 +389,7 @@
                     fecha de egreso.
                   </br></br> 
                     Si va a realizar trámite de convalidación en su país deberá pagar la apostilla del título digital, si es que no están 
-                    incluidos en el pago de titulación , así como el envío internacional.
+                    incluidos en el pago de titulación, así como el envío internacional.
                     
                   </b>
                 </p>
@@ -586,13 +586,12 @@
                           
                           <div class="col card border border-0">
         
-                            <strong class="py-3 px-3"> Caracteristicas de la certificacion parcial</strong></br></br>
+                            <strong class="py-3 px-3"> Caracteristicas de la certificacion parcial</strong></br>
                             Documento que se otorga al estudiante que haya acreditado asignaturas de algún plan de estudios y que requiere ser 
                             autenticado por la Secretaría de Educación Pública. </br></br>
 
                             Para obtener un certificado parcial debes tener cursado mÍnimo un cuatrimestre de la Licenciatura y tu expediente 
                             digital completo.
-                            
                           </div>
                         </div>   
                       </div>
