Criterios para devolución.

--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -428,13 +428,13 @@
                   <img src="img/titulacion/rg.png" alt="">
                 </div>
               </div>
-
-              <h5>
+              
+              <h5 class="text-center m-4">
                 Criterios para devolución de documentos.
               </h5>
               <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
 
-                <!--Dividir col y card en div-->
+                <!--Dividir col y card en div
 
                 <script>
 
@@ -450,7 +450,7 @@
                   }
                   
                 </script>
-                <!--
+                -->
                 <div class="col card border-0 h-100" >
                   <div class="card-body">
                     <h5 class="card-title">México</h5>
@@ -466,8 +466,7 @@
                       Persona autorizada para recibir:<br/>
                       Ubicación de google maps del domicilio:<br/>
                     </p>
-                    
-                    <button class="Botonmanual py-3 text-center border-0" onclick="copiarAlPortapapeles('direcMex')">Copiar</button>
+
                   </div>
                 </div>
 
@@ -475,18 +474,18 @@
                   <div class="card-body">
                     <h5 class="card-title">Perú</h5>
                     <p class="card-text">
-                      <b>Nombre de la calle y número:</b> <br/>
-                      <b>Distrito:</b><br/>
-                      <b>Provincia:</b><br/>
-                      <b>Departamento:</b><br/>
-                      <b>Código Postal:</b><br/>
-                      <b>Referencia del domicilio:</b><br/>
-                      <b>Teléfono:</b><br/>
-                      <b>Correo:</b><br/>
-                      <b>Persona autorizada para recibir:</b><br/>
-                      <b>Ubicación de google maps del domicilio:</b><br/>
+                      Nombre de la calle y número:<br/>
+                      Distrito:<br/>
+                      Provincia:<br/>
+                      Departamento:<br/>
+                      Código Postal:<br/>
+                      Referencia del domicilio:<br/>
+                      Teléfono:<br/>
+                      Correo:<br/>
+                      Persona autorizada para recibir:<br/>
+                      Ubicación de google maps del domicilio:<br/>
                       
-                      <a href="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Copiar</a></br>
+                      
                     </p>
                   </div>
                 </div>
@@ -495,18 +494,18 @@
                   <div class="card-body">
                     <h5 class="card-title">Ecuador</h5>
                     <p class="card-text">
-                      <b>Nombre de la calle y número:</b> <br/>
-                      <b>Parroquia:</b><br/>
-                      <b>Cantón:</b><br/>
-                      <b>Provincia:</b><br/>
-                      <b>Código Postal:</b><br/>
-                      <b>Referencia del domicilio:</b><br/>
-                      <b>Teléfono:</b><br/>
-                      <b>Correo:</b><br/>
-                      <b>Persona autorizada para recibir:</b><br/>
-                      <b>Ubicación de google maps del domicilio:</b><br/>
+                      Nombre de la calle y número: <br/>
+                      Parroquia:<br/>
+                      Cantón:<br/>
+                      Provincia:<br/>
+                      Código Postal:<br/>
+                      Referencia del domicilio:<br/>
+                      Teléfono:<br/>
+                      Correo:<br/>
+                      Persona autorizada para recibir:<br/>
+                      Ubicación de google maps del domicilio:<br/>
                       
-                      <a href="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Copiar</a></br>
+                      
                     </p>
                   </div>
                 </div>
@@ -515,22 +514,20 @@
                   <div class="card-body">
                     <h5 class="card-title">Colombia</h5>
                     <p class="card-text">
-                      <b>Clase de vía (Calle, Carrera, Diagonal, Transversal, Avenida), Número de vía, Vía Adicional y número de casa:</b> <br/>
-                      <b>Municipio:</b><br/>
-                      <b>Departamento:</b><br/>
-                      <b>Distrito:</b><br/>
-                      <b>Código Postal:</b><br/>
-                      <b>Referencia del domicilio:</b><br/>
-                      <b>Teléfono:</b><br/>
-                      <b>Correo:</b><br/>
-                      <b>Persona autorizada para recibir:</b><br/>
-                      <b>Ubicación de google maps del domicilio:</b><br/>
+                      Clase de vía (Calle, Carrera, Diagonal, Transversal, Avenida), Número de vía, Vía Adicional y número de casa:</b> <br/>
+                      Municipio:<br/>
+                      Departamento:<br/>
+                      Distrito:<br/>
+                      Código Postal:<br/>
+                      Referencia del domicilio:<br/>
+                      Teléfono:<br/>
+                      Correo:<br/>
+                      Persona autorizada para recibir:<br/>
+                      Ubicación de google maps del domicilio:<br/>
                       
-                      <a href="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Copiar</a></br>
                     </p>
                   </div>
                 </div>
-                -->
                 
               </div> 
             </div>
